# Python-nas

./: .coverage  .gitignore  ADMIN_MANUAL.md  CONTEXT.md  DEBUG.md  GEMINI.md  Makefile  README.md  future.md  futureApp.md  main.py  open_server.sh  pyproject.toml  requirements-pypy.txt  requirements.txt
.context/: security.md
alembic/: .context.md  env.py
alembic/versions/: .context.md  03def5e25b87_initial_migration.py
app/: .context.md  main.py
app/backend/: .context.md
app/core/: .context.md  auth.py  config.py  constants.py  file_security.py  logger.py  metrics.py  security.py  session_manager.py  templates.py  user_sync.py  utils.py
app/frontend/: .context.md
app/tests/: .context.md  test_adaptive_actions.py  test_api.py  test_artplayer_integration.py  test_auth_routes.py  test_components.py  test_context_loader.py  test_context_structure.py  test_copyparty_service.py  test_download_unicode.py  test_duplicate_passwords.py  test_gestures.py  test_metadata.py  test_mobile_api.py  test_mobile_auth.py  test_notifications.py  test_prefetch_logic.py  test_proxy_headers.py  test_rename.py  test_search.py  test_security.py  test_service_worker.py  test_session_persistence.py  test_supervisor_interpreter.py  test_supervisor_script_gen.py  (+14 more)
conductor/: dependency_map.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
copyparty/: copyparty.conf
scripts/: .context.md  context_loader.py  manage.py  run.sh  setup_system.sh  test_env_selection.sh  verify_permissions.py
supervisor/: .context.md  state.py  supervisor.py
(+118 files in other folders)
