[project]
name = "python-nas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "alembic==1.17.2",
    "anyio==4.12.0",
    "apkutils2==1.0.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cigam==0.0.3",
    "click==8.3.1",
    "copyparty==1.19.23",
    "coverage==7.13.1",
    "defusedxml==0.7.1",
    "ecdsa==0.19.1",
    "fastapi==0.99.1",
    "greenlet==3.3.0",
    "h11==0.14.0",
    "httpcore==0.17.3",
    "httpx==0.24.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "olefile==0.47",
    "packaging==25.0",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==1.10.26",
    "pyelftools==0.32",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.21",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "starlette==0.27.0",
    "termux==1.0.0",
    "termuxgui==0.1.6",
    "typing-extensions==4.15.0",
    "urllib3==2.6.2",
    "uvicorn==0.40.0",
    "wheel==0.45.1",
    "xmltodict==1.0.2",
]
